src/components/entities/portal/filterby-builder/dynamic-filterby/branch-multi-select/_style.scss
div.entities-portal--branch-multi-select-filterby__container {
  @include squarePicker;
  width: 100%;

  @include viewport-wide-start-from-exclusive($viewport-small) {
    max-width: 300px;
  }
}

div.entities-portal--branch-multi-select-list__container {
  display: flex;
  gap: $space-inline-xSmall-rem;
}

div.entities-portal--branch-multi-select-filterby-preview__container {
  display: flex;
  align-items: center;

  position: relative;

  user-select: none;
  cursor: pointer;
  border-radius: $border-radius-regular-em;
  border: 1px solid $clr-blue-regular;
  font-size: $font-size-xSmall-rem;
  padding-inline: $space-inline-xxSmall-em;
  padding-block: $space-inline-xxxSmall-em;
  transition: $transition-regular;

  &.active {
    background-color: $clr-blue-regular;
    color: $clr-white-regular;
  }

  &.inactive {
    background-color: transparent;
    color: $clr-blue-regular;

    &:hover {
      border-color: $clr-blue-darkest;
      color: $clr-blue-darkest;
    }
  }

  img.symbol {
    padding-inline-end: $space-inline-xxSmall-em;
    width: 100%;
    height: 0.8rem;
  }
}

